Fix link alignment on homepage links and add div

--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,12 @@ li {
     text-align: left;
 }
 
+#main_list {
+    text-align: center;
+    margin: 0;
+
+} 
+
 ol {
     margin-right: 70px;
     margin-left: 0px;
